<resources>
    <string name="app_name">AdDukkan partener</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="field_req">Field required</string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone number</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="video">Sent video message</string>
    <string name="voice">Sent voice message</string>
    <string name="image">Sent image</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_conversation">No conversation</string>
    <string name="password">Password</string>
    <string name="password_short">Password is too short</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="change_language">Change Language</string>
    <string name="details">Details</string>
    <string name="amount">Amount</string>
    <string name="products">Products</string>
    <string name="bill_number">Bill number</string>
    <string name="price">Price</string>
    <string name="pay">Pay</string>
    <string name="done">Done</string>
    <string name="user_not_found">user not found</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="notes">Notes</string>
    <string name="send">Send</string>
    <string name="ch_image">Choose image</string>
    <string name="suc">Success!</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="name">Name</string>
    <string name="update">Update Profile</string>
    <string name="next">Next</string>
    <string name="order">order</string>
    <string name="ok2">Ok</string>
    <string name="ask_a_doctor">Ask A Doctor</string>
    <string name="search2">Search</string>
    <string name="specialization">Specialization</string>
    <string name="ratings">Ratings</string>
    <string name="ask_now">Ask Now</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="dukkans">Dukkans</string>
    <string name="offers">Offers</string>
    <string name="ask_doctor">Ask Doctor</string>
    <string name="medical_prescription">Medical prescription</string>
    <string name="my_orders">My orders</string>
    <string name="favorite">Favorite</string>
    <string name="chats">Chats</string>
    <string name="country">Country</string>
    <string name="chat_with_admin">Chat with admin</string>
    <string name="contact_us">Contact us</string>
    <string name="social_media">Social media</string>
    <string name="don_t_have_account_sign_up"><![CDATA[Don\'t have account?  <font color="#3AB54A">Sign Up</font>]]></string>
    <string name="sign_up_text"><![CDATA[Already have account?  <font color="#3AB54A">Log in</font>]]></string>
    <string name="please_enter_code_sent_to">Please enter code sent to</string>
    <string name="resend">Resend in :</string>
    <string name="resend2">Resend</string>
    <string name="inv_code">Invalid Code</string>
    <string name="verification_code">Verification code</string>
    <string name="phone_number_or_email">Phone number or email</string>
    <string name="center_hospital">Center / hospital</string>
    <string name="cv">CV</string>
    <string name="ch_country">Choose country</string>
    <string name="ch_spec">Choose specialize</string>
    <string name="ch_location">Choose location</string>
    <string name="reports">Reports</string>
    <string name="hello">Hello</string>
    <string name="we_show_you_some_statistics">We show you some statistics on the number of patients, prescriptions, and the status of their implementation for the patient</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="percentage_of_purchasing_written_prescriptions">Percentage of purchasing written prescriptions</string>
    <string name="patients">Patients</string>
    <string name="Selected_treatments">Selected treatments</string>
    <string name="prescription">Prescription</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="selected_treatments">Selected treatments</string>
    <string name="choose_company">Choose Company</string>
    <string name="choose_treatment">Choose Treatment</string>
    <string name="search_by_name">Search By Name</string>
    <string name="patient_name">Patient name</string>
    <string name="prescription_name">Name</string>
    <string name="add">Add</string>
    <string name="total">Total:</string>
    <string name="notes2">Notes</string>
    <string name="print">Print</string>
    <string name="share_link">Share link</string>
    <string name="you_can_scan_a_barcode_through_the_al_dukan_app">You can scan a barcode through dukkan app</string>
    <string name="doctor_name">Doctor name :</string>
    <string name="patient_name2">Patient name :</string>
    <string name="patient_phone">Patient phone :</string>
    <string name="duckan_chat">Dukkan Chat</string>
    <string name="choose_country">Choose Country</string>
    <string name="choose_special">Choose Special</string>
    <string name="country_code">Country Code</string>
    <string name="add_client">Add client</string>
    <string name="ch_client">Choose client</string>
    <string name="ph_exist">Phone exist</string>
    <string name="ch_presc">Choose prescriptions</string>
    <string name="not_ava">Not available now</string>
    <string name="message">Message</string>
    <string name="update_profile">Update profile</string>
    <string name="prescription_num">Prescription Num:</string>
    <string name="status">Status:</string>
    <string name="in_cart">In cart</string>
    <string name="done2">Done</string>
    <string name="total2">Total:</string>
    <string name="dr">Dr.</string>
    <string name="ph_found">Phone number found</string>
    <string name="voice_uploaded">Voice uploaded</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="ph_em_found">Phone or email found</string>
    <string name="not_approved">Not approved</string>
    <string name="my_account">My account</string>
    <string name="we_will_review">We will review your account,Please wait until admin respond to you</string>
    <string name="partially_purchased">Partially purchased</string>
    <string name="new1">New</string>
    <string name="pending">Pending</string>
    <string name="my_pres">Prescriptions</string>
    <string name="phone_begin5">5XX XXX XXX</string>
    <string name="update2">تعديل بيانات المريض</string>
</resources>